arreglada maquina de estados

--- a/Ascensor.ucf
+++ b/Ascensor.ucf
@@ -1,47 +1,47 @@
-//NET "_clk_" LOC = V10;
-//NET "_reset_i" LOC = B8;
-//NET "solicitud_ps[0]" LOC=H3;
-//NET "solicitud_ps[1]" LOC=G1;
-//NET "solicitud_p1[0]" LOC=L7;
-//NET "solicitud_p1[1]" LOC=J7;
-//NET "solicitud_p2[0]" LOC=K6;
-//NET "solicitud_p2[1]" LOC=J6;
-//NET "solicitud_p3[0]" LOC=G3;
-//NET "solicitud_p3[1]" LOC=F2;
-//NET "solicitud_p4[0]" LOC=K2;
-//NET "solicitud_p4[1]" LOC=J3;
-//NET "piso_actual[0]" LOC=U8;
-//NET "piso_actual[1]" LOC=V8;
-//NET "piso_actual[2]" LOC=T5;
-//NET "sobrepeso" LOC=N8;
-//NET "puerta" LOC=M8;
-//NET "solicitud_ps_out[0]" LOC=T11;
-//NET "solicitud_ps_out[1]" LOC=R11;
-//NET "solicitud_p1_out[0]" LOC=N11;
-//NET "solicitud_p1_out[1]" LOC=M11;
-//NET "solicitud_p2_out[0]" LOC=V15;
-//NET "solicitud_p2_out[1]" LOC=U15;
-//NET "solicitud_p3_out[0]" LOC=V16;
-//NET "solicitud_p3_out[1]" LOC=U16;
-//NET "clear_ps" LOC =C4;
-//NET "clear_p1" LOC =A8;
-//NET "clear_p2" LOC =D9;
-//NET "clear_p3" LOC =C9;
+NET "_clk_" LOC = V10;
+NET "_reset_i" LOC = B8;
+NET "solicitud_ps[0]" LOC=H3;
+NET "solicitud_ps[1]" LOC=G1;
+NET "solicitud_p1[0]" LOC=L7;
+NET "solicitud_p1[1]" LOC=J7;
+NET "solicitud_p2[0]" LOC=K6;
+NET "solicitud_p2[1]" LOC=J6;
+NET "solicitud_p3[0]" LOC=G3;
+NET "solicitud_p3[1]" LOC=F2;
+NET "solicitud_p4[0]" LOC=K2;
+NET "solicitud_p4[1]" LOC=J3;
+NET "piso_actual[0]" LOC=U8;
+NET "piso_actual[1]" LOC=V8;
+NET "piso_actual[2]" LOC=T5;
+NET "sobrepeso" LOC=N8;
+NET "puerta" LOC=M8;
+NET "solicitud_ps_out[0]" LOC=T11;
+NET "solicitud_ps_out[1]" LOC=R11;
+NET "solicitud_p1_out[0]" LOC=N11;
+NET "solicitud_p1_out[1]" LOC=M11;
+NET "solicitud_p2_out[0]" LOC=V15;
+NET "solicitud_p2_out[1]" LOC=U15;
+NET "solicitud_p3_out[0]" LOC=V16;
+NET "solicitud_p3_out[1]" LOC=U16;
+NET "clear_ps" LOC =C4;
+NET "clear_p1" LOC =A8;
+NET "clear_p2" LOC =D9;
+NET "clear_p3" LOC =C9;
 
-NET "entrada_gray[2]" LOC = T5;
-NET "entrada_gray[1]" LOC = V8;
-NET "entrada_gray[0]" LOC = U8;
+//NET "entrada_gray[2]" LOC = T5;
+//NET "entrada_gray[1]" LOC = V8;
+//NET "entrada_gray[0]" LOC = U8;
 
-NET "o1" LOC = T17;
-NET "o2" LOC = T18;
-NET "o3" LOC = U17;
-NET "o4" LOC = U18;
-NET "o5" LOC = M14;
-NET "o6" LOC = N14;
-NET "o7" LOC = L14;
+//NET "o1" LOC = T17;
+//NET "o2" LOC = T18;
+//NET "o3" LOC = U17;
+//NET "o4" LOC = U18;
+//NET "o5" LOC = M14;
+//NET "o6" LOC = N14;
+//NET "o7" LOC = L14;
 
-NET "an1" LOC = P17;
-NET "an2" LOC = P18;
-NET "an3" LOC = N15;
-NET "an4" LOC = N16;
+//NET "an1" LOC = P17;
+//NET "an2" LOC = P18;
+//NET "an3" LOC = N15;
+//NET "an4" LOC = N16;
 
